Added the header layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">ColorGame</string>
     <string name="a_color_box">A color box</string>
+    <string name="the_wonderful">The wonderful</string>
+    <string name="rgb">RGB(%r, %g, %b)</string>
+    <string name="color_game">Color Game</string>
+    <string name="new_colours">New Colours</string>
+    <string name="easy">EASY</string>
+    <string name="hard">HARD</string>
 </resources>
